app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);

html, body, h1, h2, h3, nav, a, section,
header, ul, li,i, img, p, input, button, main,
form {
 margin: 0;
 padding: 0;
 border: 0;
 outline: 0;

 background: transparent;

 font: inherit;
 text-align: inherit;
 text-decoration: inherit;
 color: inherit;
}

ul {
 list-style: none;
}

/*clear fix*/

.group:after {
 content: "";
 display: block;
 clear: both;
}

// body

body {
  background: #E9E0D6;
  color: #254458;

}

// header
#logo {
  width: 65px;
  height: 65px;
  font-size: 50px;
  text-align: center;
  line-height: 70px;
  background-color: #C3C3C3;
  border: 2px solid #254458;
  border-radius: 50%;
  // background-image: image_url('logo.png');
  // background-size: contain;
  // background-repeat: no-repeat;
  // background-position: center;
}

.header-icon {
  width: 40px;
  padding: 5px;
  cursor: pointer;
}

nav {
  width: 270px;
  height: 50px;
  margin: auto;
  z-index: 5;
}

.nav-ul {
  height: 50px;
}

header {
  background: #354458;
  position: relative;
  width: 100%;
  height: 50px;
  z-index: 5;
}

.nav-ul li {
  position: relative;
  float: left;
  z-index: 5;
  display: block;
  cursor: pointer;
}

.nav-ul li:hover > img, #logo:hover {
  background: #4298B5;
}

.nav-ul li:hover > .dropdown {
  display: block;
}

.dropdown {
  display: none;
  z-index: 6;
  position: absolute;
}

.dropdown li {
  background: #ddd;
  float: none;
}

.logo {
  float: left;
  width: 30px;
  height: 30px;
}

.logo:hover {
  background: #EB7260;
  cursor: pointer;
  border-radius: 5px;

}

.white {
  width: 60px;
  height: 30px;
  float: left;
}

#map-canvas {
  position: absolute;
  height: 500px;
  width: 100%;
  margin: auto;
  float: left;
  z-index: 1;
  // left: 1%;
  // transition: left 1s;
  // border-radius: 5px;
}

.map-details {
  width: 100%;
  height: 100%;
  position: absolute;
  transform-style: preserve-3d;
  transition: transform 1s;
}

.map-details.flipped {
  transform: rotateY( 180deg );
}


.details-container {
  z-index: 10;
  transform: rotateY( 180deg );
}

.flipped .map-container {
  height: 0px;
  overflow: hidden;
  transition: height .1s;
  transition-delay: 1s;
}

.map-container, .details-container {
  margin: 0;
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.map-details-container {
  background: #E9E0D6;
  position: relative;
  height: 500px;
  width: 68%;
  margin: auto;
  float: left;
  left: 1%;
  transition: left 1s;
  border-radius: 5px;
  perspective: 800px;
}

.hide-map {
  left: 69% !important;
  transition: left 1s;
}

.hide-sidebar {
  left: -29% !important;
  transition: left 1s;
}

#active-bars {
  left: 1%;
  z-index: 2;
  position: relative;
  float: left;
  width: 30%;
  height: 500px;
  overflow-y: scroll;
  overflow-x: hidden;
  font-family: 'Oswald', sans-serif;
  transition: left 1s;
  background: #E9E0D6;
}

#active-bars li {
  border: 1px solid #254458;
  background: #C3C3C3;
  cursor: pointer;
  border-radius: 2px;
  margin-bottom: 3px;
  transition: background .25s;
}

.active, #active-bars li:hover {
  background: #EB7260 !important;
}

.icon {
  float: left;
  margin-right: 3px;
}

.name {
  float:left;
  font-size: 20px;
  width: calc(100% - 83px);
  height: 30px;
  line-height: 32px;
  overflow: hidden;
}

.verified, .alumni {
  float: right;
  font-size: 20px !important;
  line-height: 30px !important;
  height: 30px;
  width: 25px;
}

.address, .number {
  clear: both;
  height: 19px;
  overflow: hidden;
  padding-bottom: 1px
}

.address {
  width: 100%;
}

.number {
  float: left;
  width: calc(100%);
}

.more-info {
  padding-right: 1px;
  display: none !important;
  width: 14px;
}

.active .more-info {
  display: inline !important;
  height: 19px;

}

.active .number {
  width: calc(100% - 15px);
}

.more-info:hover {
  color: #4298B5;
}

.b10_logos, .NFL_logos, .sec_logos, .MLB_logos {
  z-index: 1;
  position: absolute;
  left: 50%;
  top: -30px;
  transform: translateX(-50%);
  margin: auto;
  background: #C3C3C3;
  transition: top 1.5s;
  border-radius: 5px;
}

.b10_logos, .sec_logos {
  width: 480px;
}

.NFL_logos {
  width: 1020px;
}

.MLB_logos {
  width: 960px;
}

.logo_group {
  position: relative;
  height: 50px;
}

.show {
  z-index: 2;
  top: 5px;
  transition: top 1.5s;
}

// search box

#pac-input {
  background-color: #fff;
  font-family: Roboto;
  font-size: 15px;
  font-weight: 300;
  margin: 12px;
  padding: 0 11px 0 13px;
  text-overflow: ellipsis;
  width: 400px;
  top: 10px;
}

#pac-input:focus {
  border-color: #4d90fe;
}

// home

#home {
  text-align: center;
  z-index: -10;
  float: left;
  position: absolute;
  height: 500px;
  left: 2%;
  width: 96%;
  transition: width 1s, left 1s;
  background: #C3C3C3;
  font-family: 'Oswald', sans-serif;
  overflow: hidden;
  border-radius: 5px;
}

.full-logo {
  margin: auto;
  width: 270px;
  height: 80px;
}

.full-logo h1 {
  font-size: 46px;
}

.full-logo h3 {
  float: right;
  line-height: 0px;
}

#home h2 {
  margin-top: 3px;
  font-size: 28px;
  font-weight: bold;
}

.break {
  text-align: center;
  background: #254458;
  color: #C3C3C3;
  font-size: 12px;
  padding: 3px 7px;
  width: 100px;
  margin: 30px auto 0 auto;
  letter-spacing: 2px;
}

.certs i{
  font-size: 50px;
}

.certs {
  margin: auto;
  width: 315px;
}

.certs section {
  float: left;
  padding: 10px;
}

// bar show

.bar-show {
  text-align: center;
  font-family: 'Oswald', sans-serif;
  position: relative;
  height: 500px;
  width: 100%;
  margin: auto;
  float: left;
  // left: 1%;
  // transition: left 1s;
  border-radius: 5px;
  background: #C3C3C3;
}

.bar-show > h1 {
  font-size: 64px;
  height: 94px;
  overflow: hidden;
}

.bar-show > h1 a:hover {
  color: #EB7260;
}

.bar-show h2 {
  font-size: 44px;
  height: 66px;
  overflow: hidden;
}

.bar-show h3 {
  font-size: 34px
}

.bar-show li {
  font-size: 26px;
}

.card-container {
  height: 285px;
  width: 100%;
  position: absolute;
  overflow: hidden;
}

.cards {
  position: relative;
  left: 0px;
  transition: left 1s;
  height: 100%;
}

.loyalty-card {
  position: relative;
  background: #333;
  height: 275px;
  width: 200px;
  margin: 5px;
  float: left;
  border-radius: 2px;
  color: #c3c3c3;
}

.add-card {
  position: relative;
  background: #333;
  height: 275px;
  width: 70px;
  margin: 5px;
  float: left;
  border-radius: 2px;
  color: #c3c3c3;
  transition: background .5s;
}

.loyalty-card img {
  width: 72px;
  float: left;
}

.loyalty-card h1 {
  float: left;
  font-size: 24px;
  width: 128px;
  height: 72px;
  margin: 0;
  overflow: hidden;
}

.affiliation, .hc_verified, .loyalty-card h3 {
  clear: both;
  height: 24px;
  font-size: 18px;
  overflow: hidden;
}

.affiliation a:hover {
  color: white;
}

.specials {
  height: 129px;
  overflow: scroll;
  text-align: left;
}

.left {
  top: 50%;
  left: 10px;
  transform: translateY(-50%);
  z-index: 4;
  color: #E9E0D6;
  position: absolute;
}

.right {
  top: 50%;
  right: 10px;
  transform: translateY(-50%);
  z-index: 4;
  color: #E9E0D6;
  position: absolute;
}

.left:hover, .right:hover {
  color: #EB7260;
}

.add-card:hover {
  background: #EB7260;
  cursor: pointer;
}

.add-card h1 {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

